# agentic_pymol_plugin

./: .env.example  .gitignore  2wyk.cif  LICENSE  Makefile  README.md  README_ko.md  __init__.py  config.py  pytest.ini  requirements.txt
agent/: README.md  pyproject.toml
agent/src/agent_server/: __init__.py  __main__.py  protocol.py  remote_tool.py  session.py  subagents.py
agent/src/agent_server/prompts/: main.md  python_executor.md
agent/tests/: test_describe_viewport.py  test_protocol.py  test_pymol_docs.py  test_remote_tool.py  test_session.py
plugin_side/: __init__.py  agent_client.py  protocol.py  pymol_tools.py  safety.py
tests/: conftest.py  test_capture_viewport.py  test_inspect_session.py  test_mutate_residue.py  test_pretty.py  test_protocol_parity.py  test_safety.py
