[project]
name = "agent-server"
version = "0.1.0"
description = "Out-of-process deep agent for the Agentic PyMOL Plugin."
requires-python = ">=3.11,<3.13"
dependencies = [
    "deepagents>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
]

[project.scripts]
agent-server = "agent_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_server"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_server/prompts" = "agent_server/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
